# flopap

./: .dockerignore  .env.standalone.example  .git-commit-template.txt  .gitignore  Dockerfile.standalone  QUICKSTART.md  README.md  README_CN.md  README_STANDALONE.md  check_db_status.py  check_feedback.py  docker-compose.yml  git-ignore-switch.sh  migrate_data.sh  package-lock.json  package.json  temp_migrate.sh
backend/: .dockerignore  .env.tts.example  Dockerfile  alembic.ini  fix_tts.py  pyproject.toml  requirements.txt  test_cold_start.py
backend/alembic/: env.py
backend/app/: main.py  worker.py
backend/certs/: .gitignore
backend/scripts/: daily_arxiv_refresh.py  import_2025_conferences.py  master_sync_daemon.py  run_factory_mode.py  start_factory.sh  switch_tts_env.py  test_arxiv_pools.py  test_bidirectional.py  test_ingestion.py
backend/translation_results/: translation_0147c3a8-7603-4032-8ebb-063324a9b5d1.json  translation_03ab2543-0992-49f7-b943-a04b65b07613.json  translation_03f1ebfc-1bb5-46c5-acb6-a83016874f28.json  translation_0430f8dd-9001-46e1-ba67-214abe6f0362.json  translation_0758d685-5e22-4623-b2d1-283d81ed6191.json  translation_07e74243-2728-485a-b308-5a8f095067c0.json  translation_099f0570-d472-40aa-8550-f7f820f24ed8.json  translation_0a7bad68-3b0b-422c-bc09-4fb4d5d72f28.json  translation_0a8be2e1-e572-455b-b1be-6013f45a10e2.json  translation_0b7e8948-e80f-4b4d-a8dd-de0cd8878784.json  translation_0c4277a2-ffb4-4262-b7fb-70092709f865.json  translation_0c4e7bda-183a-45f2-a382-376185fc5d0c.json  (+172 more)
backend/utils/: signature.py
(+580 files in other folders)
