[tool.poetry]
name = "flopap-backend"
version = "0.1.0"
description = "Backend services for the TikTok-style arXiv paper recommender"
authors = ["flopap <dev@flopap.local>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.0"
psycopg = { extras = ["binary"], version = "^3.1.18" }
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
arxiv = "^2.3.0"
pendulum = "^3.0.0"
loguru = "^0.7.2"
numpy = "^1.26.0"
pydantic = "^2.7.0"
alembic = "^1.13.0"
tenacity = "^9.0.0"
openai = "^1.50.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
